# On-Efficient-Scaling-Of-GNNs

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AUTHORS  LICENSE  MANIFEST.in  Makefile  README.md  TODO.md  pyproject.toml  setup.py  test_datasets.sh
.github/workflows/: _build.yml  publish.yml
configs/benchmarks/: microbench.yaml  profile.yaml
configs/comet/: exp_run.yaml  test_gcn.yaml
configs/datasets/: pyg_cora.yaml
configs/datasets/graphland_remaining/: artnet_exp.yaml  city_roads_l.yaml  pokec_regions.yaml  web_fraud.yaml
configs/datasets/main/: avazu_ctr.yaml  city_reviews.yaml  city_roads_m.yaml  hm_categories.yaml  ogbn_arxiv.yaml  ogbn_products.yaml  tolokers_2.yaml  twitch_views.yaml
configs/datasets/secondary/: amazon_computers.yaml  amazon_photo.yaml  amazon_ratings.yaml  artnet_views.yaml  citeseer.yaml  coauthor_cs.yaml  coauthor_physics.yaml  cora.yaml  cora_full.yaml  facebook.yaml  flickr.yaml  hm_prices.yaml  lastfm_asia.yaml  pubmed.yaml  reddit.yaml  web_topics.yaml  web_traffic.yaml  wikics.yaml
configs/kernels_measurements/: gatv2.yaml  gatv2_all_dims.yaml  gatv2_for_failed_setups.yaml  gatv2_new_dim_128.yaml  gatv2_new_dims.yaml  gatv2_test_new_kernel.yaml  gatv2_test_partition.yaml  gcn.yaml  gt.yaml  gt_2.yaml  gt_check_fail.yaml  gt_dfgnn.yaml  gt_for_failed_setups.yaml  min_aggr.yaml  min_aggr_test_thredholds.yaml  test_reordering.yaml
configs/kernels_measurements/arxiv/: gatv2.yaml  gcn.yaml  gt.yaml  min_aggr.yaml
configs/kernels_measurements/reordering/: gatv2.yaml  gcn.yaml  gt.yaml  min_aggr.yaml  specific_reordering_test.yaml
configs/models/: node_classifier_128_hidden_1_head.yaml  node_classifier_128_hidden_8_heads.yaml
configs/optuna/: example_cusparse.yaml
configs/training/: base.yaml
csrc/: common.cuh  kernels.cuh  turbo_gnn.cpp
csrc/gatv2/: gatv2_kernel.cu
csrc/gt/: graph_transformer.cu
csrc/reduction/: reduction_aggr.cu  reduction_aggr_base.cu
csrc/spmm/: cusparse_spmm.cpp  cusparse_spmm.h  edge_norm_kernels.cu
demo/: smoke_test.py
dev/daniilkk/: test_spmm_bwd.py
dev/daniilkk/gat_v2_with_constant_memory/: benchmark.cpp  benchmark2.cu  benchmark3.cu  benchmark_one_warp.cu  constant.cu  global.cu  softmax.cu  softmax.cuh
dev/daniilkk/notebooks/: check_cusparse.ipynb  test_fusegnn.ipynb
dev/fvelikon/: assad.ipynb  gradient_check_min_aggr.ipynb
dev/fvelikon/block_sparse_exp/: test.ipynb
dev/fvelikon/exp_min_aggr/: perf_warp_reduce_mixed_backward_float4.txt  perf_warp_reduce_mixed_forward_backward_float4.txt  perf_warp_reduce_mixed_forward_backward_float4_vectorized_store.txt  perf_warp_reduce_mixed_forward_new_huge_nodes_old_strategy_quantiles.txt  perf_warp_reduce_mixed_forward_new_huge_nodes_strategy.txt  perf_warp_reduce_mixed_forward_new_huge_nodes_strategy_quantiles.txt  perf_warp_reduce_mixed_vanilla.txt
dev/fvelikon/gat_v2_warp_parallel/: bench.py  gatv2_fwd_bwd_logs  gatv2_logs  gatv2_online_softmax_logs  kernel_draft.cu
dev/fvelikon/graph_transformer_backend/: dgl_example.py
dev/fvelikon/graph_transformer_kernel/: dgl_example copy.py  dgl_example.py  dgl_test_correctness.py  dgl_test_correctness_real_graph.py  graph_transformer 123123123123.cu  graph_transformer copy 2.cu  graph_transformer copy.cu  graph_transformer_2_with_strided_grid.cu  graph_transformer_current_with_D_improvements.cu  graph_transformer_new.cu  graph_transformer_original.cu
dev/fvelikon/notebooks/: transpose_matrix.py  try_cute.ipynb
dev/sinfillo/: train_all.sh
dev/sinfillo/exp_min_aggr/: perf_base.txt  perf_shmem.txt  perf_shmem_mixed.txt  perf_warp_reduce_mixed.txt  perf_warp_tiled.txt  perf_warp_tiled_mixed.txt
dev/zen0no/utils/: graph_attention_preprocess.py  plot_blockwise_hist.py  rowwise_block_reorder.py
docker/: Dockerfile
notebooks/: analysis.ipynb  check_torch_scatter_reduce.ipynb  test_cugraph_backend.ipynb
scripts/: autotune.py  benchmark.py  kernel_launch_comparison.py  kernel_tune.py  launch_ncu.sh  run_arxiv_sweep.sh  run_arxiv_sweep_dgl.sh  run_profile.py  train.py  validate.py
src/backends/: __init__.py  autotune.py  base.py  registry.py
src/backends/cuda_backend/: __init__.py  conv.py
src/backends/cuda_test_backend/: __init__.py  conv.py
src/backends/cugraph_backend/: __init__.py  conv.py
src/backends/cusparse_backend/: __init__.py  conv.py  cusparse_spmm.cpp  edge_norm_kernels.cu  utils.py
src/backends/dfgnn_backend/: __init__.py  bindings.py  conv.py
src/backends/dgl_backend/: __init__.py  conv.py  utils.py
src/backends/fusegnn_backend/: __init__.py  conv.py  utils.py
src/backends/pyg_backend/: __init__.py  conv.py  utils.py
src/backends/tcgnn_backend/: __init__.py  conv.py
src/backends/torch_native_backend/: __init__.py  conv.py
src/backends/triton_backend/: __init__.py  conv.py  kernels_impl.py
src/benchmarking/: autotuner.py  memory.py  microbench.py  profiler.py
src/data/: converters.py  datasets.py  graphland_datasets.py  loaders.py  wsb_format.cu
src/models/: __init__.py  base.py  config.py  registry.py
src/models/architecture/: __init__.py  classifier.py  encoder.py
src/models/layers/: __init__.py  blocks.py  conv_dispatcher.py
src/training/: __init__.py  hooks.py  metrics.py  optimizer.py  scheduler.py  trainer.py
src/utils/: checkpointing.py  logger.py  scripts_utils.py  triton_constants.py
tests/: conftest.py
tests/correctness/: conftest.py  fixtures.py  test_autotune_integration.py  test_cugraph_backend.py  test_gatv2.py  test_gatv2_correctness.py  test_graph_transformer.py  test_gt_correctness.py  test_matmul_convs.py  test_mean_aggr.py  test_min_aggr_2d_kernel.py  test_pooling_aggr.py  test_reduction_aggr_precision.py  test_reduction_aggr_vs_dgl.py  test_undirected_kernels.py  test_verify_backends.py  test_warp_parallel.py
tests/integration/: launch_training_pipeline.sh
tests/performance/: min_aggr_benchmarks.py
tests/unit/: test_autotune.py  test_graphland_datasets.py  test_triton_autotune.py
turbo_gnn/: __init__.py  _autotune.py  _functions.py  _kernels.py  _timer.py  graph.py  ops.py
(+79 files in other folders)
