[build-system]
requires = ["setuptools", "wheel", "ninja", "packaging", "psutil"]
build-backend = "setuptools.build_meta"

[project]
name = "turbo-gnn"
version = "0.1.0rc4"
description = "High-performance CUDA kernels for GNN aggregation, with a comprehensive benchmarking framework"
readme = "README.md"
requires-python = ">=3.10"

authors = []
keywords = [
    "graph neural networks",
    "GNN",
    "PyTorch",
    "CUDA",
    "benchmarking",
    "deep learning",
    "graph learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = ["torch>=2.0.0", "numpy"]

[project.optional-dependencies]
# ---------------------------------------------------------------------------
# Dev: research + testing + linting (no DGL, works with torch>=2.9)
# Usage: pip install -e ".[dev]"
# ---------------------------------------------------------------------------
dev = [
    # torch version is NOT pinned here; the Makefile bootstrap step
    # pre-installs the right torch before `pip install -e ".[dev]"` runs.
    # Base constraint (torch>=2.0.0) comes from [project].dependencies.
    "numpy",
    # research deps
    "scipy>=1.7.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "tensorboard>=2.10.0",
    "psutil>=5.9.0",
    "ogb>=1.3.0",
    "python-dotenv",
    "tabulate",
    # pyg (core only; C++ extensions like torch-scatter not needed)
    "torch-geometric",
    # lint
    "ruff==0.14.0",
    "pre-commit>=3.0.0",
    "mypy>=0.990",
    "pylint>=2.15.0",
    "isort>=5.11.0",
    "types-PyYAML>=6.0.0",
    "types-tqdm>=4.65.0",
    # test
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    # triton / cutlass
    "nvidia-cutlass-dsl==4.3.0.dev0",
]

# ---------------------------------------------------------------------------
# Bench: dev + DGL + viz + cugraph (requires torch==2.4.0 for DGL 2.4.0)
# Usage: pip install -e ".[bench]"
# ---------------------------------------------------------------------------
bench = [
    "turbo-gnn[dev]",
    # DGL (requires torch==2.4.0)
    "torch==2.4.0",
    "dgl==2.4.0",
    # viz
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "plotly>=5.0.0",
    # NOTE: pylibcugraphops-cu12 moved to [cugraph] extra —
    # it only ships pre-built wheels for specific CUDA/Python combos
    # and fails to build from sdist.  Install separately if needed:
    #   pip install pylibcugraphops-cu12
]

# ---------------------------------------------------------------------------
# Cugraph: optional, only if pre-built wheel is available
# Usage: pip install -e ".[cugraph]"
# ---------------------------------------------------------------------------
cugraph = [
    "pylibcugraphops-cu12",
]

# ---------------------------------------------------------------------------
# Full: bench + notebook + experiment tracking
# Usage: pip install -e ".[full]"
# ---------------------------------------------------------------------------
full = [
    "turbo-gnn[bench]",
    "jupyterlab>=3.0.0",
    "ipywidgets>=7.6.0",
    "ipython>=8.0.0",
    "comet_ml>=3.53.2",
]

[project.scripts]
gnn-train = "scripts.train:main"
gnn-validate = "scripts.validate:main"
gnn-benchmark = "scripts.benchmark:main"
gnn-profile = "scripts.run_profile:main"
gnn-autotune = "scripts.autotune:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["turbo_gnn*", "src*", "scripts*"]
exclude = ["tests*", "experiments*", "data*", "runs*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml"]

# Black configuration
[tool.black]
line-length = 120
target-version = ['py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | data
  | runs
  | experiments
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["turbo_gnn", "src", "scripts"]
skip_glob = ["data/*", "runs/*", "experiments/*"]

# pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "-v",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "cuda: marks tests that require CUDA",
    "integration: marks integration tests",
    "unit: marks unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["turbo_gnn", "src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/__examples/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = "^(dev/|dev$)"

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torch_geometric.*",
    "dgl.*",
    "ogb.*",
    "scipy.*",
    "sklearn.*",
    "matplotlib.*",
    "seaborn.*",
    "plotly.*",
    "triton.*",
]
ignore_missing_imports = true

# Pylint configuration
[tool.pylint.main]
py-version = "3.10"
jobs = 0
recursive = true

[tool.pylint.messages_control]
disable = [
    "C0103",
    "C0114",
    "C0115",
    "C0116",
    "R0902",
    "R0913",
    "R0914",
    "W0212",
    "B011",
    "F401",
    "F841",
    "F811",
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-args = 10
max-locals = 20
max-returns = 8
max-branches = 15
max-statements = 60
max-parents = 7
max-attributes = 15

[tool.ruff]
line-length = 120
target-version = "py310"

exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "/data",
    "runs",
    "experiments",
    "__examples",
    "/dev",
    "csrc",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "C4",
]
ignore = [
    "B008",
    "C901",
    "B011",
    "F401",
    "F841",
    "F811",
    "E402",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["turbo_gnn", "src", "scripts"]
